# zeeroapi

./: .env.prod.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  nginx.conf
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_all_markets.sql  0003_pages.sql  0004_named_odds.sql  0005_images.sql  0006_page_sync_settings.sql  0007_saas_api.sql  0008_provider_capabilities.sql  0009_request_events.sql  0010_key_scoping.sql  0011_billing.sql  0012_status_changelog.sql  0013_diamondexch_provider.sql  0014_bcgame_provider.sql  0015_match_results.sql  0016_password_resets.sql  0017_images_provider.sql  0018_rate_limit_per_sec.sql  0019_provider_native_fields.sql  0020_activate_exchange_providers.sql  0021_featured_matches.sql  0022_header_matches.sql  0023_provider_profiles.sql  0024_diamondexch_six_endpoints.sql  0025_match_dead.sql  0026_diamondexch_events.sql  0027_diamondexch_sports.sql
backend/src/: analytics.rs  api_keys.rs  auth.rs  cache.rs  config.rs  db.rs  email.rs  error.rs  main.rs  models.rs  page_sync.rs  state.rs
backend/src/jobs/: mod.rs  scheduler.rs
backend/src/routes/: admin.rs  auth.rs  billing.rs  images.rs  ingest.rs  leagues.rs  live.rs  matches.rs  mod.rs  odds.rs  portal.rs  sports.rs  status.rs  v1.rs
backend/src/routes/providers/: bcgame.rs  betwinner.rs  diamondexch.rs  megapari.rs  melbet.rs  mod.rs  onewin.rs  onexbet.rs
backend/src/scraper/: melbet.rs  mod.rs  pages.rs  sample_live.json  types.rs
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scraper-py/: ADDING_A_PROVIDER.md  README.md  _ingest.py  probe.py  probe2.py  probe3.py  probe4.py  probe5.py  probe6.py  probe7.py  probe8.py  probe9.py  probe_1win.py  probe_1xbet.py  (+31 more)
sdks/python/: README.md  pyproject.toml
sdks/python/zeroapi/: __init__.py
(+65 files in other folders)
