[package]
name = "melbet-saas-backend"
version = "0.1.0"
edition = "2021"
description = "SaaS backend that scrapes sports, matches, odds and live scores, with an admin API."

[dependencies]
# Web / async
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate",
    "rust_decimal",
] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# HTTP client / scraping
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
scraper = "0.20"
flate2 = "1"

# Redis (cache + live snapshot + pub/sub)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
