[project]
name = "zeroapi"
version = "1.1.0"
description = "Official Python SDK for the ZeroApi sports-odds API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["zeroapi", "odds", "sports", "betting", "api"]
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zeroapi"]
